Fully implemented setup

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "A simple pipe for generating docker containers for new development projects",
     "type": "library",
     "license": "MIT",
+	"version": "1.0.0",
     "authors": [
         {
             "name": "Nick Rupert",
