--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "helium/docker-generator",
-    "description": "A simple pipe for generating docker containers for new development projects",
+    "name": "helium/docker-utils",
+    "description": "A set of helpful docker utilities for laravel projects",
     "type": "library",
     "license": "MIT",
-	"version": "1.0.1",
+	"version": "2.0.0",
     "authors": [
         {
             "name": "Nick Rupert",
@@ -16,14 +16,14 @@
     },
 	"autoload": {
 		"psr-4": {
-			"Helium\\DockerGenerator\\": "src/",
-			"Helium\\DockerGenerator\\Tests\\": "tests/"
+			"Helium\\DockerUtils\\": "src/",
+			"Helium\\DockerUtils\\Tests\\": "tests/"
 		}
 	},
 	"extra": {
 		"laravel": {
 			"providers": [
-				"Helium\\DockerGenerator\\DockerGeneratorServiceProvider"
+				"Helium\\DockerUtils\\DockerUtilsServiceProvider"
 			]
 		}
 	}
