--- a/templates/docker-compose/docker-compose.yml.template
+++ b/templates/docker-compose/docker-compose.yml.template
@@ -6,6 +6,7 @@ services:
       context : ./
       dockerfile : Dockerfile
       network: host
+    container_name: {{CONTAINER_NAME}}_php
     restart: on-failure
     volumes:
       - ./:/code:delegated
@@ -14,7 +15,9 @@ services:
       - {{PHP_PORT}}:9000
     expose:
       - {{PHP_PORT}}
-    container_name: {{CONTAINER_NAME}}_php
+    extra_hosts:
+      - "postgres:172.17.0.1"
+      - "mysql:172.17.0.1"
 
   web:
     image: nginx:latest
@@ -22,6 +25,7 @@ services:
       context : ./docker-config/
       dockerfile : Dockerfile_Nginx
       network: host
+    container_name: {{CONTAINER_NAME}}_nginx
     restart: on-failure
     ports:
       - {{WEB_PORT}}:80
@@ -33,4 +37,6 @@ services:
       - php
     depends_on:
       - php
-    container_name: {{CONTAINER_NAME}}_nginx
+    extra_hosts:
+      - "postgres:172.17.0.1"
+      - "mysql:172.17.0.1"
