Fixed extra_hosts pgsql reference

--- a/templates/docker-compose/docker-compose.yml.template
+++ b/templates/docker-compose/docker-compose.yml.template
@@ -16,7 +16,7 @@ services:
     expose:
       - {{PHP_PORT}}
     extra_hosts:
-      - "postgres:172.17.0.1"
+      - "pgsql:172.17.0.1"
       - "mysql:172.17.0.1"
 
   web:
