--- a/templates/docker-config/site.conf.template
+++ b/templates/docker-config/site.conf.template
@@ -1,6 +1,7 @@
 server {
     index index.php index.html;
-    server_name {{HOSTNAME}}
+		listen 80 default_server;
+    server_name {{HOSTNAME}};
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /code/public;
