--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "illuminate/console": "^8.0|^9.0|^10.0|^11.0",
-        "orchestra/testbench": "^6.4|^7.0"
+        "orchestra/testbench": "^6.4|^7.0|^8.0|^9.0"
     },
 	"autoload": {
 		"psr-4": {
